# grok-plugin-cc

./: .gitignore  Cargo.toml  NOTICE  README.md  package.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
crates/grok-companion/: Cargo.toml  README.md
crates/grok-companion/src/: acp.rs  claude_context.rs  error.rs  git.rs  grok.rs  jobutil.rs  main.rs  process.rs  render.rs  state.rs  test_env.rs  transfer.rs  worker.rs  workspace.rs
crates/grok-companion/src/commands/: cancel.rs  mod.rs  result.rs  resume_candidate.rs  review.rs  setup.rs  status.rs  task.rs  task_worker.rs  transfer.rs
crates/grok-companion/tests/: cli_real_grok.rs
plugins/grok/: CHANGELOG.md  LICENSE
plugins/grok/.claude-plugin/: plugin.json
plugins/grok/agents/: grok-rescue.md
plugins/grok/commands/: adversarial-review.md  cancel.md  rescue.md  result.md  review.md  setup.md  status.md  transfer.md
plugins/grok/hooks/: hooks.json
plugins/grok/prompts/: adversarial-review.md  stop-review-gate.md
plugins/grok/schemas/: review-output.schema.json
plugins/grok/scripts/: grok-companion.mjs  resolve-companion.mjs  session-lifecycle-hook.mjs  stop-review-gate-hook.mjs
plugins/grok/scripts/lib/: args.mjs  claude-context.mjs  fs.mjs  git.mjs  grok.mjs  job-control.mjs  process.mjs  prompts.mjs  render.mjs  state.mjs  tracked-jobs.mjs  transfer.mjs  workspace.mjs
scripts/: install-companion.sh
tests/: args.test.mjs  claude-context.test.mjs  commands.test.mjs  git-smart-diff.test.mjs  helpers.mjs  render.test.mjs  state.test.mjs  stop-gate.test.mjs
(+4 files in other folders)
